--- a/index.html
+++ b/index.html
@@ -3,39 +3,44 @@
     <head>
         <meta charset="utf-8">
         <title>Nerd's магазин готовых макетов</title>
-        <link href="style.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
     </head>
 <body>
-    <header class="header">
+    <header class="site-header">
        <div class="container clearfix">
-        <div class="logo"> <a href="#"> <img src="#" alt="Лого"></a></div>
-        <ul class="header__nav">
-            <li><a href="#">Студия</a></li>
-            <li><a href="#">Клиенты</a></li>
-            <li><a href="#">Магазин</a></li>
-            <li><a href="#">Корзина</a></li>
-        </ul>
-        </div>
+         <div class="header__cont">
+           <div class="logo">
+             <a href="#"> <img src="img/logo.jpg" width="139" height="56" alt="Лого"></a></div>
+           <ul class="header__nav">
+             <li><a href="#">Студия</a></li>
+             <li><a href="#">Клиенты</a></li>
+             <li><a href="#">Магазин</a></li>
+           </ul>
+           <div class="user-basket">
+             <a class="basket" href="#">Корзина</a>
+           </div>
+           </div>
+         </div>
     </header>
     <div class="slider">
       <div class="container">
         <div class="slider__cont">
             <div class="slider__itm--active">
-              <div><img src="#" alt="Экраны"></div>
+              <div><img src="img/slider1.jpg" width="338" height="231" alt="Экраны"></div>
               <div class="slider__title">Долго, дорого, скрупулезно.</div>
                 <div class="slider__text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</div>
                 <a class="btn" href="#">Узнать больше</a>
             </div>
 
             <div class="slider__itm--active">
-              <div><img src="#" alt="Калькулятор"></div>
+              <div><img src="img/slider2.jpg" width="230" height="249" alt="Калькулятор"></div>
               <div class="slider__title">Любите ли вы математику, как любим ее мы?</div>
                 <div class="slider__text">Нашим дизайнерам мы удаляем нейроны, ответственные за креатив, чтобы дать им
                     возможность все просчитать</div>
                 <a class="btn" href="#">Узнать больше</a>
             </div>
             <div class="slider__itm--active">
-              <div><img src="#" alt="Психоделика"></div>
+              <div><img src="img/slider3.jpg" width="333" height="319" alt="Психоделика"></div>
                 <div class="slider__title">Только наркотики, только хардкор!</div>
                 <div class="slider__text">Все дизайнерские решения в нашей компании принимаются только под воздействием качественных галлюциногенов</div>
                 <a class="btn" href="#">Узнать больше</a>
@@ -52,44 +57,42 @@
       <div class="container">
         <div class="offer">
             <div class="offer__item">
-                <div class="col__img"><img src="#" alt="Ноут-на-красном"></div>
-                <p class="col__title">Веб-сайты</p>
-                <p class="col__text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+                <div class="col__img"><img src="img/offer_red.jpg" width="240" height="124" alt="Ноут-на-красном"></div>
+                <h2 class="col__title">Веб-сайты</h2>
+                <div class="col__text">Мир никогда не будет прежним после того как увидит ваш сайт!</div>
                 <a class="btn--main" href="#">Заказать</a>
             </div>
             <div class="offer__item">
-                <div class="col__img"><img src="#" alt="Телефон-на-зеленом"></div>
-                <p class="col__title">Приложения</p>
-                <p class="col__text">Покорите топ-10 приложений в AppStrore и Google Play</p>
+                <div class="col__img"><img src="img/offer_green.jpg" width="240" height="124" alt="Телефон-на-зеленом"></div>
+                <h2 class="col__title">Приложения</h2>
+                <div class="col__text">Покорите топ-10 приложений в AppStrore и Google Play</div>
                 <a class="btn--main" href="#">Заказать</a>
             </div>
             <div class="offer__item">
-                <div class="col__img"><img src="#" alt="Флипачарт-на-желтом"></div>
-                <p class="col__title">Презентации</p>
-                <p class="col__text">Вы даже не подозреваете, насколько вы изумительны!</p>
+                <div class="col__img"><img src="img/offer_yellow.jpg" width="240" height="124" alt="Флипачарт-на-желтом"></div>
+                <h2 class="col__title">Презентации</h2>
+                <div class="col__text">Вы даже не подозреваете, насколько вы изумительны!</div>
                 <a class="btn--main" href="#">Заказать</a>
             </div>
         </div>
       </div>
         <div class="about">
           <div class="container">
-            <div class="about">
-                <p class="about__title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
-                <p class="about__subtile">Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше
-                    креатива. Работаем не покладая рук, как роботы.</p>
-                <p class="about__service">Выполняем заказы на разработку</p>
+            <div class="about-left">
+                <div class="about__title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</div>
+                <div class="about__subtile">Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше
+                    креатива. Работаем не покладая рук, как роботы.</div>
+                <div class="about__service">Выполняем заказы на разработку</div>
                 <ul class="about__list">
                     <li class="list__itm">Веб-сайтов любой сложности</li>
-
                     <li class="list__itm">Мобильных приложений для iOS и Android</li>
-
                     <li class="list__itm">Слайдшоу и видео для корпоративных презентаций</li>
                 </ul>
             </div>
-            <div class="about__right">
+            <div class="about-right">
                 <a class="logo">
-                    <img src="#" alt="Лого">
-                    <p class="big_logo__text">Since 2004</p>
+                    <img src="img/logo_big.jpg" width="187" height="75" alt="Лого">
+                    <div class="logo__text">Since 2004</div>
                 </a>
             </div>
             <div class="about__service">КАК Мы работаем:</div>
@@ -103,32 +106,32 @@
           <div class="container">
           <ul class="partners">
             <li class="partners__itm">
-                <a href="#"><img src="#" alt="Лого-Глуханко"></a>
-            </li>
+                <a href="#"><img src="img/logo_Glukh.jpg" width="198" height="37" alt="Глуханко"></a></li>
             <li class="partners__itm">
-              <a href="#"><img src="#" alt="Лого-HTML"></a>
-            </li>
+              <a href="img/logo_html.jpg"><img src="#" width="199" height="68" alt="HTML-Academy"></a></li>
             <li class="partners__itm">
-              <a href="#"><img src="#" alt="Лого-Бородинский"></a>
-            </li>
+              <a href="#"><img src="img/logo_borod.jpg" width="209" height="90" alt="Бородинский"></a></li>
         </ul>
           </div>
     </div>
+      </div>
 
-    <div class="map">
+    <footer class="footer">
+      <div class="map">
       <div class="container">
         <div class="map__card">
             <div class="card__title">NЁrds design studio</div>
             <div class="card__text">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</div>
             <div class="card__text">тел. +7 (812) 275-75-75</div>
-            <a class="btn" href="#">Напишите нам</a>
-
+            <a class="btn--footer" href="#">Напишите нам</a>
         </div>
-        <div class="map"></div>
-      <img src="#">
+        <div class="map">
+          <img src="img/map_logo.jpg" width="1200" height="416" alt="Карта">
+        </div>
+
     </div>
 
-<footer class="footer"></footer>
+
   <div class="container"></div>
     <div class="footer__share">
         <a class="footer__itm--vk" href="#">Вконтакте</a>
@@ -138,7 +141,8 @@
     <div class="footer__title">Давайте дружить, это выгодно!</div>
     <div class="footer__subtitle">Скидка 10% для друзей из социальных сетей.</div>
     </div>
-      </div>
+    </footer>
+
 
 </body>
 </html>
